--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" type="text/css" href="assets/inc/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/owl-carousel/css/owl.carousel.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/owl-carousel/css/owl.theme.css" />
+    <link rel="stylesheet" type="text/css" href="assets/inc/ionicons/css/ionicons.min.css" >
+    <link rel="stylesheet" type="text/css" href="assets/inc/lightbox/css/lightbox.min.css" >
 </head>
 <body>
     <app-root></app-root>
@@ -27,7 +29,7 @@
     <script type="text/javascript" src="assets/inc/classie.js"></script>
     <script type="text/javascript" src="assets/inc/jquery.easing.min.js"></script>
     <script type="text/javascript" src="assets/inc/jquery.counterup.min.js"></script>
-    <!-- <script type="text/javascript" src="assets/inc/smoothscroll.js"></script> -->
+    <script type="text/javascript" src="assets/inc/lightbox/js/lightbox.min.js"></script>
     <script type="text/javascript" src="assets/js/home/theme.js"></script>
 </body>
 </html>
