--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400,700,500" />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,400" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" >
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap" >
     <link rel="stylesheet" type="text/css" href="assets/inc/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/animations/css/animate.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/font-awesome/css/font-awesome.min.css" />
