--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400,700,500,900" />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,400" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300,900&display=swap" >
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap" >
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300,900&display=swap">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap">
     <link rel="stylesheet" type="text/css" href="assets/inc/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/animations/css/animate.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/owl-carousel/css/owl.carousel.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/owl-carousel/css/owl.theme.css" />
-    <link rel="stylesheet" type="text/css" href="assets/inc/ionicons/css/ionicons.min.css" >
-    <link rel="stylesheet" type="text/css" href="assets/inc/lightbox/css/lightbox.min.css" >
+    <link rel="stylesheet" type="text/css" href="assets/inc/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/inc/lightbox/css/lightbox.min.css">
 </head>
-<body>
+<body style="overflow-x:hidden; overflow-y:auto;">
     <app-root></app-root>
     <!-- Plugins JS -->
     <script type="text/javascript" src="assets/inc/jquery/jquery-1.11.1.min.js"></script>
