--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>GalaxyHome</title>
+    <title>ENJOY OUR METAVERSE - 갤럭시코퍼레이션 </title>
     <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="naver-site-verification" content="cb9d327e7a02d5fd8aa446081950e07027f5b55a" />
+    <meta name="keyword" content="메타버스, 부캐, 아바타, 페르소나, IP, 부캐선발대회, 마미손, 원슈타인, 김다비, 본캐">
+    <meta name="description" contents="국내 최초 연예인 아바타 메타버스 기업">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="ENJOY OUR METAVERSE - 갤럭시코퍼레이션">
+    <meta property="og:description" content="국내 최초 연예인 아바타 메타버스 기업">
+    <meta property="og:image" content="assets/images/home/ogtag.png">
+    <meta property="og:url" content="http://www.galaxyuniverse.org/">
+    <link rel="shortcut icon" href="assets/images/home/favicon.png">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400,700,500,900" />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,400" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300,900&display=swap">
@@ -17,6 +26,7 @@
     <link rel="stylesheet" type="text/css" href="assets/inc/owl-carousel/css/owl.theme.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" type="text/css" href="assets/inc/lightbox/css/lightbox.min.css">
+    
 </head>
 <body style="overflow-x:hidden; overflow-y:auto;">
     <app-root></app-root>
