--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
     <meta property="og:image" content="assets/images/home/ogtag.png">
     <meta property="og:url" content="http://www.galaxyuniverse.org/">
     <link rel="shortcut icon" href="assets/images/home/favicon.png">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400,700,500,900" />
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,400" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300,900&display=swap">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,700,500,900" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:300,400" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap">
     <link rel="stylesheet" type="text/css" href="assets/inc/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/animations/css/animate.min.css" />
