--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ENJOY OUR METAVERSE - 갤럭시코퍼레이션 </title>
+    <title>갤럭시코퍼레이션ㅣthe first Metaverse AI Avatar Company in Korea </title>
     <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <meta name="naver-site-verification" content="cb9d327e7a02d5fd8aa446081950e07027f5b55a" /> -->
     <meta name="naver-site-verification" content="d9bfb945e19b3300f8d161fc2c5e6ba3395306e4" />
-    <meta name="keyword" content="메타버스, 부캐, 아바타, 페르소나, IP, 부캐선발대회, 마미손, 원슈타인, 김다비, 본캐">
-    <meta name="description" contents="국내 최초 연예인 아바타 메타버스 기업">
+    <meta name="keyword"
+        content="갤럭시코퍼레이션, 메타버스, AI, 아바타, 버추얼휴먼, 딥리얼, GalaxyCorporation, Metaverse, AI, Avatar, virtual human, 아바드림, AVADREAM, 피지컬100, PHYSICAL 100, 미스터트롯2, Mr. Trot 2, ギャラクシーコーポレーション, جالاكسي كوربوريشن">
+    <meta name="description"
+        contents="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="ENJOY OUR METAVERSE - 갤럭시코퍼레이션">
-    <meta property="og:description" content="국내 최초 연예인 아바타 메타버스 기업">
+    <meta property="og:title" content="갤럭시코퍼레이션ㅣthe first Metaverse AI Avatar Company in Korea">
+    <meta property="og:description"
+        content="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
     <meta property="og:image" content="assets/images/home/ogtag.png">
     <meta property="og:url" content="http://www.galaxyuniverse.ai/">
     <link rel="shortcut icon" href="assets/images/home/favicon.png">
