--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <meta name="keyword"
         content="갤럭시코퍼레이션, 메타버스, AI, 아바타, 버추얼휴먼, 딥리얼, GalaxyCorporation, Metaverse, AI, Avatar, virtual human, 아바드림, AVADREAM, 피지컬100, PHYSICAL 100, 미스터트롯2, Mr. Trot 2, ギャラクシーコーポレーション, جالاكسي كوربوريشن">
     <meta name="description"
-        contents="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
+        content="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
     <meta property="og:type" content="website">
     <meta property="og:title" content="갤럭시코퍼레이션ㅣthe first Metaverse AI Avatar Company in Korea">
     <meta property="og:description"
