--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,28 @@
         content="갤럭시코퍼레이션, 메타버스, AI, 아바타, 버추얼휴먼, 딥리얼, GalaxyCorporation, Metaverse, AI, Avatar, virtual human, 아바드림, AVADREAM, 피지컬100, PHYSICAL 100, 미스터트롯2, Mr. Trot 2, ギャラクシーコーポレーション, جالاكسي كوربوريشن">
     <meta name="description"
         content="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="갤럭시코퍼레이션ㅣthe first Metaverse AI Avatar Company in Korea">
+    <meta itemprop="description"
+        content="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
+    <meta itemprop="image" content="https://galaxyuniverse.ai:443/assets/images/home/ogtag.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://galaxyuniverse.ai:443">
     <meta property="og:type" content="website">
     <meta property="og:title" content="갤럭시코퍼레이션ㅣthe first Metaverse AI Avatar Company in Korea">
     <meta property="og:description"
         content="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
-    <meta property="og:image" content="assets/images/home/ogtag.png">
-    <meta property="og:url" content="http://www.galaxyuniverse.ai/">
+    <meta property="og:image" content="https://galaxyuniverse.ai:443/assets/images/home/ogtag.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="갤럭시코퍼레이션ㅣthe first Metaverse AI Avatar Company in Korea">
+    <meta name="twitter:description"
+        content="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
+    <meta name="twitter:image" content="https://galaxyuniverse.ai:443/assets/images/home/ogtag.png">
+
     <link rel="shortcut icon" href="assets/images/home/favicon.png">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,700,500,900" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:300,400" />
