--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,20 @@
     <script type="text/javascript" src="assets/inc/jquery.counterup.min.js"></script>
     <script type="text/javascript" src="assets/inc/lightbox/js/lightbox.min.js"></script>
     <script type="text/javascript" src="assets/js/home/theme.js"></script>
+
+    <script type="application/ld+json">
+    {
+     "@context": "http://schema.org",
+     "@type": "Person",
+     "name": "갤럭시코퍼레이션 홈페이지",
+     "url": "https://galaxyuniverse.ai",
+     "sameAs": [
+       "https://www.facebook.com/GalaxycorpNewsroom",
+       "https://blog.naver.com/galaxy_official"
+     ]
+    }
+    </script>
+
 </body>
 
 </html>
