--- a/src/index.html
+++ b/src/index.html
@@ -1,45 +1,23 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
-    <title>갤럭시코퍼레이션ㅣthe first Metaverse AI Avatar Company in Korea </title>
+    <title>ENJOY OUR METAVERSE - 갤럭시코퍼레이션 </title>
     <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <meta name="naver-site-verification" content="cb9d327e7a02d5fd8aa446081950e07027f5b55a" /> -->
-    <meta name="naver-site-verification" content="d9bfb945e19b3300f8d161fc2c5e6ba3395306e4" />
-    <meta name="keyword"
-        content="갤럭시코퍼레이션, 메타버스, AI, 아바타, 버추얼휴먼, 딥리얼, GalaxyCorporation, Metaverse, AI, Avatar, virtual human, 아바드림, AVADREAM, 피지컬100, PHYSICAL 100, 미스터트롯2, Mr. Trot 2, ギャラクシーコーポレーション, جالاكسي كوربوريشن">
-    <meta name="description"
-        content="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
-
-    <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="갤럭시코퍼레이션ㅣthe first Metaverse AI Avatar Company in Korea">
-    <meta itemprop="description"
-        content="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
-    <meta itemprop="image" content="https://galaxyuniverse.ai:443/assets/images/home/ogtag.png">
-
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://galaxyuniverse.ai:443">
+    <meta name="naver-site-verification" content="cb9d327e7a02d5fd8aa446081950e07027f5b55a" />
+    <meta name="keyword" content="메타버스, 부캐, 아바타, 페르소나, IP, 부캐선발대회, 마미손, 원슈타인, 김다비, 본캐">
+    <meta name="description" contents="국내 최초 연예인 아바타 메타버스 기업">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="갤럭시코퍼레이션ㅣthe first Metaverse AI Avatar Company in Korea">
-    <meta property="og:description"
-        content="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
-    <meta property="og:image" content="https://galaxyuniverse.ai:443/assets/images/home/ogtag.png">
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="갤럭시코퍼레이션ㅣthe first Metaverse AI Avatar Company in Korea">
-    <meta name="twitter:description"
-        content="갤럭시코퍼레이션은 국내 최초 메타버스 AI 아바타 기업입니다. 메타버스 FIRST MOVER로서 IP, 컨텐츠, 커머스, 테크를 메타버스 아바타와 융복합하여 비즈니스를 진행하고 있습니다.">
-    <meta name="twitter:image" content="https://galaxyuniverse.ai:443/assets/images/home/ogtag.png">
-
+    <meta property="og:title" content="ENJOY OUR METAVERSE - 갤럭시코퍼레이션">
+    <meta property="og:description" content="국내 최초 연예인 아바타 메타버스 기업">
+    <meta property="og:image" content="assets/images/home/ogtag.png">
+    <meta property="og:url" content="http://www.galaxyuniverse.org/">
     <link rel="shortcut icon" href="assets/images/home/favicon.png">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,700,500,900" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:300,400" />
-    <link rel="stylesheet" type="text/css"
-        href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap">
     <link rel="stylesheet" type="text/css" href="assets/inc/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/animations/css/animate.min.css" />
@@ -48,21 +26,8 @@
     <link rel="stylesheet" type="text/css" href="assets/inc/owl-carousel/css/owl.theme.css" />
     <link rel="stylesheet" type="text/css" href="assets/inc/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" type="text/css" href="assets/inc/lightbox/css/lightbox.min.css">
-
-    <script type="application/ld+json">
-    {
-     "@context": "http://schema.org",
-     "@type": "Person",
-     "name": "갤럭시코퍼레이션 홈페이지",
-     "url": "https://galaxyuniverse.ai",
-     "sameAs": [
-       "https://www.facebook.com/GalaxycorpNewsroom",
-       "https://blog.naver.com/galaxy_official"
-     ]
-    }
-    </script>
+    
 </head>
-
 <body style="overflow-x:hidden; overflow-y:auto;">
     <app-root></app-root>
     <!-- Plugins JS -->
@@ -79,5 +44,4 @@
     <script type="text/javascript" src="assets/inc/lightbox/js/lightbox.min.js"></script>
     <script type="text/javascript" src="assets/js/home/theme.js"></script>
 </body>
-
 </html>
