--- a/src/naver9f9f52347379a1a24c30301b60e0ca24.html
+++ b/src/naver9f9f52347379a1a24c30301b60e0ca24.html
@@ -1,1 +1,4 @@
-naver-site-verification: naver9f9f52347379a1a24c30301b60e0ca24.html
+[ZoneTransfer]
+ZoneId=3
+ReferrerUrl=https://searchadvisor.naver.com/console/verify?site=http%3A%2F%2Fgalaxyuniverse.ai
+HostUrl=https://searchadvisor.naver.com/
